ChromeOS: Open chrome on the shelf context menu's display in cash.

Make Chrome shelf item context menus open items on the right display.
Use a ScopedRootWindowForNewWindows when executing commands in cash.
(we'll need another fix for mash, but my first attempt didn't work)

Fixes the defect when using --ash-enable-shelf-model-synchronization.
Nix the ShelfView codepath that only matches the local menu lifetime.
(ShelfModel Sync handles the menu command execution async/remotely)

Bug: 768908
Test: Chrome opens on the same display as the shelf item [context menu].
Change-Id: If8c812c892c4c628e9c012ea9e9cd75461d3b71a
Reviewed-on: https://chromium-review.googlesource.com/688108
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504800}
Former-commit-id: 05655615e0d589c91440c1adc2c3329593263293